[package]
name = "ajobqueue"
version = "0.1.0"
edition = "2021"

[lib]
name = "ajobqueue"

[dependencies]
ajobqueue-macro = { path = "macro" }

async-channel = "1.6.1"
async-trait = "0.1.56"
erased-serde = "0.3.21"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["rt", "macros", "sync", "time", "rt-multi-thread"] }
typetag = "0.2.1"
ulid = { version = "0.6.0", features = ["serde", "uuid"] }
