[package]
name = "ajobqueue"
version = "0.1.0"
edition = "2021"

[lib]
name = "ajobqueue"

[features]
postgres = ["sqlx"]

[workspace]
members = ["macro"]

[dependencies]
ajobqueue-macro = { path = "macro" }

async-channel = "1.6.1"
async-trait = "0.1.56"
chrono = "0.4.19"
erased-serde = "0.3.21"
indoc = "1.0.6"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["rt", "macros", "sync", "time", "rt-multi-thread"] }
typetag = { path = "../contrib/typetag" }
# typetag = "0.2.1"
ulid = { version = "0.6.0", features = ["serde", "uuid"] }

# Postgres
sqlx = { version = "0.6.0", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "uuid"], optional = true }
