[package]
name = "ajobqueue-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "0.3.1"
linkme-impl = "0.3.1"
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = "1.0.98"
